app/assets/stylesheets/posts.css.scss
// Place all the styles related to the Posts controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

.sub-header {
  font-size: 16px;
}

img {
	width:350px;
}

.logo {
  position:absolute;
  left:0;
  top:0;

}

.img_caption {
  font-size: 10px;
  font-style: italic;
}

.center { 
  position: center;
  text-align: center;
  width: 500px
}

body, html{
    background-color:#EAE9E1;
      width:900px;
    height:1100px;
    margin: auto;
}

#more_button {
  background-image :url(/assets/morebutton.png);
  max-height: 100px; 
  max-width: 100px;
}

#more_button:hover {
  max-height: 100px; 
  max-width: 100px;
}

.posts {
    width: 100%;

  .post-author {
    font-size: 12px;

  }

  .post-content {
    

  }

  .post-title {
    font-style: italic;
    margin-bottom: 10px;

  }
}


#content
{    top:0px;
    position:absolute;
    border:1px solid red;
}

#wrapper {
  background-color:#EAE9E1;
  width: 20%;
  margin: auto;
}

.infobox {
    position: relative;
    background: url(/assets/smallinfoblankbox.png); 
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
    display:block;
    height: 165px;
    width: 278px
}

.infotext {
    position: absolute;
    top: 15%;
    left: 9%;
    z-index:100;
    width: 85%
}

